// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header render header with searchbox 1`] = `
<header
  class="header-right flex"
>
  <div
    class="flex"
  >
    <!---->
     
    <router-link-stub
      to="/"
    >
      <img
        alt="Ethereum Logo"
        class="header-logo sm-hide"
        src="../images/ethereum-logo-wireframe.png"
      />
    </router-link-stub>
     
    <navlinks-stub
      class="sm-hide"
    />
  </div>
   
  <div
    class="menu inline flex flex-center"
  >
    <searchbox-stub />
     
    <a
      class="sm-hide"
      href="https://github.com/ethereum/ethereum-org-website"
      rel="noopener noreferrer"
      target="_blank"
      title="Fork This Page (GitHub)"
    >
      <img
        alt="GitHub"
        class="hide-dark"
        src="../images/icon-github.svg"
      />
       
      <img
        alt="GitHub"
        class="show-dark"
        src="../images/icon-github-white.svg"
      />
    </a>
     
    <span
      class="pointer view-mode"
      tabindex="0"
    >
      <img
        alt="Switch to Dark Mode"
        class="hide-dark"
        src="../images/icon-sun.svg"
      />
       
      <img
        alt="Switch to Light Mode"
        class="show-dark"
        src="../images/icon-moon.svg"
      />
    </span>
     
    <router-link-stub
      class="nav-link"
      to="/languages/"
    >
      <languageicon-stub />
       
      <span
        class="sm-hide"
      >
        Languages
      </span>
    </router-link-stub>
  </div>
</header>
`;

exports[`Header render header without searchbox 1`] = `
<header
  class="header-right flex"
>
  <div
    class="flex"
  >
    <!---->
     
    <router-link-stub
      to="/"
    >
      <img
        alt="Ethereum Logo"
        class="header-logo sm-hide"
        src="../images/ethereum-logo-wireframe.png"
      />
    </router-link-stub>
     
    <navlinks-stub
      class="sm-hide"
    />
  </div>
   
  <div
    class="menu inline flex flex-center"
  >
    <!---->
     
    <a
      class="sm-hide"
      href="https://github.com/ethereum/ethereum-org-website"
      rel="noopener noreferrer"
      target="_blank"
      title="Fork This Page (GitHub)"
    >
      <img
        alt="GitHub"
        class="hide-dark"
        src="../images/icon-github.svg"
      />
       
      <img
        alt="GitHub"
        class="show-dark"
        src="../images/icon-github-white.svg"
      />
    </a>
     
    <span
      class="pointer view-mode"
      tabindex="0"
    >
      <img
        alt="Switch to Dark Mode"
        class="hide-dark"
        src="../images/icon-sun.svg"
      />
       
      <img
        alt="Switch to Light Mode"
        class="show-dark"
        src="../images/icon-moon.svg"
      />
    </span>
     
    <router-link-stub
      class="nav-link"
      to="/languages/"
    >
      <languageicon-stub />
       
      <span
        class="sm-hide"
      >
        Languages
      </span>
    </router-link-stub>
  </div>
</header>
`;
